--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,5 +56,17 @@ dependencies {
     
     implementation 'com.google.code.gson:gson:2.8.5'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.7'
 
+
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
+
+
+
+    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
+
+    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
 }
+
+
